crates/datarig-tui/tests/snapshots/ui_snapshots__read_only_banner_en_80x24.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
" ! Another datarig is running · tabs here are not saved (saved queries are)     "
"╭ Explorer ────────────╮╭ Workspace ───────────────────────────────────────────╮"
"│  ＋ New connection   ││                                                      │" Hidden by multi-width symbols: [(4, " ")]
"│▸ ○   local-pg        ││  No open tabs                                        │"
"│▾ Saved queries 4     ││  Pick a connection in the explorer, or press         │"
"│  ▸ reports           ││  Ctrl+O.                                             │"
"│  ▸ 売上              ││                                                      │" Hidden by multi-width symbols: [(6, " "), (8, " ")]
"│    scratch           ││  Enter      Connect and open a console               │"
"│                      ││  Ctrl+O     Quick connect                            │"
"│                      ││  Ctrl+T     New console tab                          │"
"│                      ││  Space t u  Reopen a closed tab                      │"
"│                      ││  n          New connection                           │"
"│                      ││  F1         Keyboard help                            │"
"│                      ││  :          Commands                                 │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
"                   │ Enter open · : commands · F1 help · q quit · Space more EN "
