crates/datarig-tui/tests/snapshots/ui_snapshots__save_name_dialog_en_160x45.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────────────────────╮╭ Workspace ───────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│  ＋ New connection                   ││                                                                                                                      │" Hidden by multi-width symbols: [(4, " ")]
"│▸ ○   local-pg                        ││  No open tabs                                                                                                        │"
"│▾ Saved queries 4                     ││  Pick a connection in the explorer, or press Ctrl+O.                                                                 │"
"│  ▸ reports                           ││                                                                                                                      │"
"│  ▸ 売上                              ││  Enter      Connect and open a console                                                                               │" Hidden by multi-width symbols: [(6, " "), (8, " ")]
"│    scratch                           ││  Ctrl+O     Quick connect                                                                                            │"
"│                                      ││  Ctrl+T     New console tab                                                                                          │"
"│                                      ││  Space t u  Reopen a closed tab                                                                                      │"
"│                                      ││  n          New connection                                                                                           │"
"│                                      ││  F1         Keyboard help                                                                                            │"
"│                                      ││  :          Commands                                                                                                 │"
"│                             ╭ Edit connection — local-pg ──────────────────────────────────────────────────────────────────────╮                             │"
"│                             │  Basic   SSH   Advanced                                                    Ctrl+N/Ctrl+P section │                             │"
"│                             │                                                                                                  │                             │"
"│                             │ Driver            ‹PostgreSQL› MySQL  Redis  Elasticsearch   not yet supported                   │                             │"
"│                             │ Name              local-pgEPORTS/Daily                                                           │                             │"
"│                             │ Host              127.0.0.1                                                                      │                             │"
"│                             │ Port              55432                                                                          │                             │"
"│                             │ User              datarig                                                                        │                             │"
"│                             │ Password storage  ‹Keychain› File  Command  Env  Prompt   ←/→ change                             │                             │"
"│                             │ Password          •••••••                             kept in the OS keychain                    │                             │"
"│                             │ Database          datarig                                                                        │                             │"
"│                             │                                                                                                  │                             │"
"│                             │ DSN               postgres://datarig@127.0.0.1:55432/datarig?sslmode=disable                     │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                    Test    Save    Cancel                                                        │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             ╰───────────────────────── Tab/↑↓ move · Ctrl+N/P section · Ctrl+T test · Ctrl+S save · Esc cancel ╯                             │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"╰──────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"                                                                                                                                                             EN "
